# farm-factory

./: .env.dev  README.md  alembic.ini  create_service.sh  entrypoint.sh  gunicorn_start.sh  main.py  pyproject.toml  redis.conf  requirements.txt
app/: main.py
app/alembic/: env.py
app/alembic/data/: resources.json  structures.json
app/alembic/versions/: 1ff13ab8554c_add_storage.py  266c26c1b739_add_game_map_deleted.py  3a5c9c6ea73c_initial_migration.py  5783a4e9e74c_add_building.py  6652f2259ef1_insert_resources.py  71d6af20dfd8_add_building_resources.py  d1d32689b8a1_insert_structures.py  eba9b9902199_unique.py  fd1c8fb011e7_change_structure_collumns.py
app/core/: base_repository.py  config.py  database.py  exceptions.py  middleware.py  routes.py  schemas.py  security.py
app/exceptions/: build_max_level.py  not_found_building.py  requirements.py  storage_negative.py
app/features/: __init__.py  dependencies.py
app/features/auth/: models.py  repository.py  routes.py  schemas.py
app/features/building/: models.py  repository.py  routes.py  schemas.py
app/features/building_resource/: models.py  repository.py  schemas.py
app/features/game_item/: models.py
app/features/game_map/: models.py  repository.py  routes.py  schemas.py
app/features/storage/: models.py  repository.py  routes.py  schemas.py
app/features/structure/: models.py  repository.py  routes.py  schemas.py
app/services/: building_service.py  game_map_service.py  storage_service.py  user_service.py
tests/: conftest.py
